--- a/css/style/search_job.css
+++ b/css/style/search_job.css
@@ -232,6 +232,11 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     flex-direction: column;
 }
 
+.card-footer{
+    color: gray !important;
+    background: none !important;
+}
+
 /* For Smart Phone View */
 @media screen and (max-width: 768px){
     #icons{
